completed html elements on page

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     <p>E-mail: test@example.com</p>
     <p> Twitter: @test</p>
     <div id="footer">
+    	<p>&copy; Broadway 2016 Home About Work Team Contact</p>
+    </div>
 
 </body>
 </html>
