adds nav links and anchors lower on page

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	<div id="header">
 	  <h1>Broadway Design</h1>
 	  <nav>
-	  	<h4>Home</h4>
-	  	<h4>Process</h4>
-	  	<h4>Work</h4>
-	  	<h4>Team</h4>
-	  	<h4>Contact</h4>
+	  	<a href="#header"><h4>Home</h4></a>
+	  	<a href="#process"><h4>Process</h4></a>
+	  	<a href="#work"><h4>Work</h4></a>
+	  	<a href="#team"><h4>Team</h4></a>
+	  	<a href="#contact"><h4>Contact</h4></a>
 	  </nav>
     </div>
-    <h2>Our Process</h2>
+    <h2 id="process">Our Process</h2>
     <img src="./resources/images/identify.svg">
     <h3>Identify</h3>
     <p>We focus on the most important details</p>
@@ -26,11 +26,11 @@
     <h3>Execute</h3>
     <p>We put everything we have into our work.</p>
     <h3 id="designed-in">Designed in New York</h3>
-    <h3>Portfolio</h3>
+    <h3 id="work">Portfolio</h3>
     <p>Coming Soon</p>
-    <h3>Team</h3>
+    <h3 id="team">Team</h3>
     <p>We're Hiring!</p>
-    <h3>Contact</h3>
+    <h3 id="contact">Contact</h3>
     <p>Phone: (555)-555-5555</p>
     <p>E-mail: test@example.com</p>
     <p> Twitter: @test</p>
