--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     <p>E-mail: test@example.com</p>
     <p> Twitter: @test</p>
     <div id="footer">
-    	<p>&copy; Broadway 2016 Home About Work Team Contact</p>
+      <nav>
+    	<p>&copy; Broadway 2016 <a href="#header">Home</a> <a href="#process">About</a> <a href="#work">Work</a> <a href="#team">Team</a> <a href="#contact">Contact</a></p>
+      </nav>
     </div>
 
 </body>
