add basic css to header and process portion of page

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<link href="./resources/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<div id="header">
+	<div class="header">
 	  <h1>Broadway Design</h1>
-	  <nav>
+	  <nav id="nav-links">
 	  	<a href="#header"><h4>Home</h4></a>
 	  	<a href="#process"><h4>Process</h4></a>
 	  	<a href="#work"><h4>Work</h4></a>
