finished adding feature complete css & html for page design

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <body>
 	<div class="header">
 	  <h1>Broadway Design</h1>
-	  <nav id="nav-links">
-	  	<a href="#header"><h4>Home</h4></a>
-	  	<a href="#process"><h4>Process</h4></a>
-	  	<a href="#work"><h4>Work</h4></a>
-	  	<a href="#team"><h4>Team</h4></a>
-	  	<a href="#contact"><h4>Contact</h4></a>
+	  <nav>
+	  	<a href="#header"><p class="nav">Home</p></a>
+	  	<a href="#process"><p class="nav">Process</p></a>
+	  	<a href="#work"><p class="nav">Work</p></a>
+	  	<a href="#team"><p class="nav">Team</p></a>
+	  	<a href="#contact"><p class="nav">Contact</p></a>
 	  </nav>
     </div>
     <h2 id="process">Our Process</h2>
@@ -34,11 +34,8 @@
     <p>Phone: (555)-555-5555</p>
     <p>E-mail: test@example.com</p>
     <p> Twitter: @test</p>
-    <div id="footer">
       <nav>
-    	<p>&copy; Broadway 2016 <a href="#header">Home</a> <a href="#process">About</a> <a href="#work">Work</a> <a href="#team">Team</a> <a href="#contact">Contact</a></p>
+    	<p id="footer"><span id="copyright">&copy; Broadway 2016</span> <span class="nav"><a href="#header">Home</a> <a href="#process">About</a> <a href="#work">Work</a> <a href="#team">Team</a> <a href="#contact">Contact</a></span></p>
       </nav>
-    </div>
-
 </body>
 </html>
